Theming: fixed "too wide inputs in FF"

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
@@ -172,9 +172,7 @@ body.canvas-blocking .canvas-blocker {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    overflow: scroll;
     -webkit-overflow-scrolling: touch;
-    //touch-action: none;
 }
 
 .offcanvas-scrollable {
